--- a/about.html
+++ b/about.html
@@ -65,8 +65,8 @@
       <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center">
           <div class="col-md-9 ftco-animate text-center">
-          	<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>About us</span></p>
-            <h1 class="mb-0 bread">About us</h1>
+          	<p class="breadcrumbs"><span class="mr-2"><a href="index.html"></a></span>
+            <h1 class="mb-0 bread">Sobre Nosotros</h1>
           </div>
         </div>
       </div>
